fix footer clipping

--- a/src/App.css
+++ b/src/App.css
@@ -121,9 +121,7 @@ body {
   align-items: baseline;
 }
 
-.kills-text {
-  
-}
+.kills-text {}
 
 .icon-s {
   font-size: 2rem;
@@ -314,6 +312,13 @@ body {
 @media (max-width: 1250px) {
   body {
     padding: 2rem 2rem;
+  }
+}
+
+@media (max-width: 460px) {
+  .footer, ul {
+    flex-direction: column;
+    gap: 1rem;
   }
 }
 
